# EBP-Tools

./: .editorconfig  .gitignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE.txt  README.md  angular.json  eslint.config.mjs  forge.config.js  output.xlsx  package-lock.json  package.json  prettier.config.js  tsconfig.app.json  tsconfig.spec.json  webpack.main.config.js  webpack.renderer.config.js  webpack.rules.js
.github/: dependabot.yaml
.github/workflows/: build.yml
angular/: angular.json  jest.config.ts  package-lock.json  package.json  setup-jest.ts  tsconfig.app.json
angular/src/: index.html  main.ts  styles.scss
angular/src/app/: app.config.ts  app.html  app.routes.ts  app.scss  app.ts
angular/src/app/core/: api.interceptor.ts
angular/src/assets/i18n/: de.json  en.json  es.json  fr.json  it.json  ro.json
angular/src/models/: electron.d.ts  image-detection-result.ts  jwt.ts  log-data.ts  versions.ts
angular/src/styles/: _index.scss  scrollbar.scss
angular/src/types/: electron.d.ts  image-detection-result.ts  opencv.d.ts  versions.ts  video-platform.enum.ts
assets/: icon.icns
electron/: discord-rpc.js  preload.js  puppeteer.js  server.js  settings.json  template.xlsx
electron/assets/: dmg-background.psd  icon.icns  icon.psd
puppeteer/: package-lock.json  package.json  server.js
src/: main.js  preload.js  server.js
src/angular/: styles.scss
src/angular/app/: app.config.ts  app.html  app.routes.ts  app.ts
src/angular/styles/: scrollbar.scss
src/detector/: script.cpp
src/scss/: index.scss
src/static/: README.md
src/static/script/: client.js  tools.js
src/static/style/: button.css  display.css  index.css  input-file.css  loader.css  message.css  scroll-bar.css  spinner.css
src/views/: index.html
(+164 files in other folders)
